# Cortex

./: .gitignore  README.md  render.yaml
.claude/: launch.json
.github/workflows/: keep-alive.yml
apps/api/: .env.example  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial_schema.py  0002_roadmap_progress.py  0003_add_ai_agents_pillar.py  0004_add_todos.py  0005_add_microlearnings.py  0006_add_user_resources.py  0007_add_user_settings.py  0008_add_bookmarks.py  0009_add_flashcard_reviews.py  0010_add_quizzes.py  0011_flashcards_support_topics.py  0012_add_challenge_days.py  0013_add_meditation.py  0014_add_completed_at.py  0015_add_langgraph_crewai_pillars.py
apps/api/app/: auth.py  config.py  db.py  main.py  utils.py
apps/api/app/models/: __init__.py  activity.py  bookmark.py  challenge_day.py  dsa_problem.py  flashcard_review.py  microlearning.py  plan.py  project.py  quiz.py  todo.py  topic.py  user_resource.py  user_setting.py
apps/api/app/routers/: bookmarks.py  challenge.py  chat.py  dsa_problems.py  flashcards.py  microlearnings.py  plans.py  progress.py  projects.py  quizzes.py  settings.py  streak.py  todos.py  topics.py  user_resources.py
apps/api/app/schemas/: __init__.py
apps/api/app/services/: activity.py  flashcard.py  llm.py  quiz.py  streak.py
apps/api/app/services/planner/: generator.py  llm.py  prompts.py
apps/api/cortex_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/web/: next.config.ts  package-lock.json  package.json
apps/web/public/: manifest.json
(+80 files in other folders)
