[project]
name = "cortex-api"
version = "0.1.0"
description = "Cortex learning-ops backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "alembic>=1.13",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pyjwt[crypto]>=2.10",
    "certifi",
    "python-dateutil>=2.9",
    "tzdata",  # IANA tz database for zoneinfo on systems without one
    "openai>=1.0",  # client for NVIDIA's OpenAI-compatible endpoint (dev chat)
    "anthropic>=0.40",  # Claude chat provider (prod)
]

[tool.setuptools]
packages = ["app"]
